Fixed Nav Bar "jumping"
Also cleaned up some of the SOA.js file.

--- a/styles/soa.css
+++ b/styles/soa.css
@@ -149,8 +149,11 @@ a:visited {
 }
 
 div {
-	float: left;
 	display: block;
+}
+
+#content-outer, #content-outer div {
+	float: left;
 }
 
 #main {
@@ -234,31 +237,6 @@ div {
 		padding-bottom: 45px;
 	}
 
-/*.topimg {
-	background-image: url("/Assets/images/SOASprite.png");
-	background-repeat: no-repeat;
-	background-position: -10px -56px;
-	margin-top: 60px;
-	width: 100%;
-	height: 62px;
-	padding: 0;
-	border: none;
-	top: 0;
-	box-shadow: none;
-}*/
-
-/*.bottomimg {
-	background-image: url("/Assets/images/SOASprite.png");
-	background-repeat: no-repeat;
-	background-position: -10px -183px;
-	width: 100%;
-	height: 17px;
-	padding: 0;
-	border: none;
-	margin: 0;
-	box-shadow: none;
-	z-index: -1;
-}*/
 
 .final_content_border > div {
 	background: rgba(0, 0, 0, 0.55);
@@ -360,15 +338,9 @@ div {
 	height: 44px;
 	background-image: url("/Assets/images/SOASprite.png");
 	background-position: 0px 0px;
-	margin-top: 20px;
+	//margin-top: 20px;
 	z-index: 4;
-}
-
-#nav-bar.navigation-fixed {
-	position: fixed;
-	width: 1054px;
-	margin-top: 0px;
-	top: 0px;
+	float: none !important;
 }
 
 #nav-bar.navigation-fixed #navigation li:first-child {
@@ -568,14 +540,13 @@ div {
 	color: white;
 	cursor: default;
 	position: absolute;
-	top: 280px;
 	right: 2px;
 	z-index: 6;
 }
 
-#nav-bar.navigation-fixed #accountBar {
-	top: 0px;
-	right: 0px;
+#nav-bar-sticky-wrapper.is-sticky #accountBar {
+	position: relative;
+	left: 845px;
 	border-top-right-radius: 0;
 }
 
@@ -820,7 +791,7 @@ ul.accountOptions li a {
 	display: inline-block;
 	position: static;
 	width: 433px;
-	float: right;
+	float: right !important;
 	margin-right: 51px;
 	clear: none;
 }
@@ -855,7 +826,7 @@ ul.accountOptions li a {
 	display: inline-block;
 	position: static;
 	width: 271px;
-	float: right;
+	float: right !important;
 	margin-right: 51px;
 	clear: none;
 }
@@ -897,7 +868,7 @@ ul.accountOptions li a {
 .quad-col-4 {
 	width: 190px;
 	height: auto;
-	float: right;
+	float: right !important;
 	margin-right: 51px;
 	text-align: center;
 }
@@ -919,6 +890,7 @@ ul.accountOptions li a {
 	line-height: 30px;
 	text-align: center;
 	color: white;
+	float: left;
 	font-family: 'orbitronlight', sans-serif;
 }
 
